--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "mocha": "^5.0.4"
   }
 }
